Add incorrect mark when dropping unsupported files

--- a/src/components/CephaloEditor/style.scss
+++ b/src/components/CephaloEditor/style.scss
@@ -65,24 +65,36 @@
     max-width: 75%;
     max-height: 65%;
     margin-bottom: 40px;
-    [id="circle"], [id="cephalo"] {
+    [id="circle"], [id="cephalo"], [id="incorrect"] {
       transition-property: fill stroke transform opacity;
       transition-duration: 0.3s;
       transform-origin: center center;
+    }
+
+    [id="incorrect"] {
+      fill: rgba(255, 100, 100, 50);
+    }
+
+    [id="incorrect"], [id="correct"] {
+      opacity: 0;
     }
   }
 
   &.dropzone__active {
     cursor: pointer;
     .dropzone_placeholder_image {
-        [id="circle"] {
-        fill: rgba(160, 201, 255, 110);
-        stroke: rgba(160, 201, 255, 255);
+      [id="circle"] {
+        fill: rgba(0, 200, 100, 110);
+        stroke: rgba(0, 200, 100, 255);
         transform: scale(1.05);
       }
 
       [id="cephalo"] {
         transform: rotate(-10deg) scale(0.85);
+      }
+
+      [id="correct"] {
+        opacity: 1;
       }
     }
   }
@@ -100,6 +112,13 @@
       [id="cephalo"] {
         transform: scale(0.5);
         opacity: 0;
+      }
+
+      [id="incorrect"] {
+        opacity: 1;
+        transition-delay: 0.1s;
+        transition-duration: 0.2s;
+        transform: scale(0.7);
       }
     }
   }
