--- a/src/components/CephaloEditor/style.scss
+++ b/src/components/CephaloEditor/style.scss
@@ -25,6 +25,9 @@
   height: 100%;
   max-height: 100%;
   text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: #424242;
   color: white;
   font-family: 'Roboto';
