--- a/src/components/CephaloEditor/style.scss
+++ b/src/components/CephaloEditor/style.scss
@@ -9,21 +9,25 @@
   background-color: white;
   display: flex;
   flex-direction: column;
+  height: 90%;
+  max-height: 90%;
   & > * {
     flex-shrink: 0;
   }
+  .list_steps {
+    overflow-y: scroll;
+    flex-shrink: 1;
+    flex-grow: 0;
+  }
 }
 
-.list_steps {
-  overflow-y: scroll;
-  flex-shrink: 1;
-  flex-grow: 0;
-  height: 100%;
+.toolbar {
+  height: 10%;
 }
 
 .canvas_container {
-  height: 100%;
-  max-height: 100%;
+  height: 90%;
+  max-height: 90%;
   text-align: center;
   display: flex;
   justify-content: center;
