Distinguish {canvas,image} size
* Move image related state to a separate reducer file
* Read image width and height in saga
* Set image width and height separately from the canvas dimensions
* Handle resizing of canvas with ResizeObserver

--- a/src/components/CephaloEditor/style.scss
+++ b/src/components/CephaloEditor/style.scss
@@ -26,8 +26,9 @@
 }
 
 .canvas_container {
-  height: 90%;
-  max-height: 90%;
+  height: 90vh;
+  max-height: 90vh;
+  overflow: scroll;
   text-align: center;
   display: flex;
   justify-content: center;
