Get app to work, add analysis select

--- a/src/components/AnalysisStepper/style.scss
+++ b/src/components/AnalysisStepper/style.scss
@@ -1,3 +1,13 @@
+.root {
+  display: flex;
+  flex-direction: column;
+}
+
+.list {
+  flex-grow: 1;
+  overflow-y: scroll;
+}
+
 @keyframes spin {
     from {
       transform: rotate(0deg);
