--- a/src/components/App/style.scss
+++ b/src/components/App/style.scss
@@ -1,4 +1,6 @@
 .root {
+  // @TODO: Load font 
+  font-family: Roboto, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   height: 100vh;
   max-height: 100vh;
   width: 100vw;
