--- a/src/components/CephaloCanvasContainer/style.scss
+++ b/src/components/CephaloCanvasContainer/style.scss
@@ -1,4 +1,13 @@
 .root {
   overflow: scroll;
   display: flex;
+  background-color: #272727;
+}
+
+.loading_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+  width: 100%;
 }
