Get scale origin to (kind of) work

--- a/src/components/CephaloCanvas/style.scss
+++ b/src/components/CephaloCanvas/style.scss
@@ -5,3 +5,10 @@
 .canvas {
   background: #272727;
 }
+
+.image {
+  will-change: transform;
+  transition-property: transform;
+  transition-duration: 0.1s;
+  /*pointer-events: none;*/
+}
