Fix displaying equal lines, unhighlight image

--- a/src/components/CephaloCanvas/style.scss
+++ b/src/components/CephaloCanvas/style.scss
@@ -5,3 +5,9 @@
 .canvas {
   background: #272727;
 }
+
+.image {
+  will-change: opacity;
+  transition-property: opacity;
+  transition-duration: 0.3s;
+}
