--- a/src/components/CephaloCanvas/style.scss
+++ b/src/components/CephaloCanvas/style.scss
@@ -10,5 +10,48 @@
   will-change: opacity transform;
   transition-property: transform opacity;
   transition-duration: 0.1s;
-  /*pointer-events: none;*/
+}
+
+.landmark {
+  stroke-width: 0.7mm;
+  pointer-events: none;
+  will-change: transform opacity;
+  transition-property: transform opacity fill stroke;
+  transition-duration: 0.5s;
+  transform-origin: 50% 50%;
+
+  &_highlighted {
+    stroke: orange;
+    fill: orange;
+    fill-opacity: 1;
+    stroke-opacity: 1;
+  }
+
+  &_unhighlighted {
+    fill-opacity: 0;
+    stroke-opacity: 0;
+  }
+}
+
+.point {
+  @extend .landmark;
+  stroke: black;
+  fill: white;
+}
+
+.vector {
+  @extend .landmark;
+  stroke: black;
+
+  &_extended {
+    @extend .vector;
+    stroke-dasharray: 15 10;
+    fill-opacity: 0;
+    stroke-opacity: 0;
+    stroke: greenyellow;
+  }
+
+  &_parallel {
+    @extend .vector_extended;
+  }
 }
