--- a/src/components/Workspace/style.scss
+++ b/src/components/Workspace/style.scss
@@ -14,3 +14,21 @@
   align-self: center;
   width: 100%;
 }
+
+.sidebar {
+  &_hidden {
+    display: none;
+  }
+  width: 25vw;
+  max-width: 25vw;
+  flex-grow: 0;
+  display: flex;
+  flex-direction: column;
+  .selector {
+    flex-grow: 0;
+    width: 100%;
+  }
+  .stepper {
+    flex-grow: 1;
+  }
+}
