--- a/src/components/WorkspaceImagePicker/style.scss
+++ b/src/components/WorkspaceImagePicker/style.scss
@@ -13,8 +13,7 @@
 .image_container {
   height: 30vh;
   max-height: 30%;
-  width: 30vh;
-  max-width: 30%;
+  min-width: 30vh;
 
   &:not([disabled]) {
   cursor: pointer;
