Fix types and move some styles to SCSS

--- a/src/components/CephDropzone/style.scss
+++ b/src/components/CephDropzone/style.scss
@@ -22,6 +22,10 @@
     flex-grow: 0;
   }
 
+  .dropzone_svg {
+    max-width: 100% !important;
+  }
+
   .demo_button {
     margin-top: 15px;
   }
