Clean up Zoomable

--- a/src/components/Zoomable/style.scss
+++ b/src/components/Zoomable/style.scss
@@ -4,6 +4,7 @@
 }
 
 .zoomable {
+  will-change: transform;
   transition-property: 'transform';
   transition-duration: 200ms;
   transition-timing-function: ease-in;
