Get locales to work

--- a/src/components/App/App.global.css
+++ b/src/components/App/App.global.css
@@ -1,8 +1,14 @@
+:root {
+  --color-background: #eee;
+  --font-family: system-ui;
+}
+
 html,
 body {
   margin: 0;
   height: 100%;
   width: 100%;
+  font-family: var(--font-family);
 }
 
 #container {
