--- a/src/components/App/style.scss
+++ b/src/components/App/style.scss
@@ -1,6 +1,7 @@
 .root {
   // @TODO: Load font
-  font-family: Roboto, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   max-height: 100vh;
 }
 
